jsinterop-ts-defs-processor/src/test/resources/errors/members/JsTypeWithDuplicateMethodAndField.java
package com.vertispan.tsdefs.types;

import jsinterop.annotations.*;

@JsType
public class JsTypeWithDuplicateMethodAndField {
    public String member0;
    public void member0(){
    }
}